--- a/SearchGZ/MainWindow.xaml
+++ b/SearchGZ/MainWindow.xaml
@@ -58,10 +58,12 @@
         <CheckBox x:Name="checkBox" Content="Select All/Deselect All" Grid.Column="2" HorizontalAlignment="Left" Margin="226,89,0,0" VerticalAlignment="Top" Width="137" Grid.ColumnSpan="2"/>
         <GroupBox x:Name="groupBox1" Grid.Column="3" Header="Other" HorizontalAlignment="Left" Margin="31.333,-107,0,0" VerticalAlignment="Top" Height="177" Width="514">
             <Canvas HorizontalAlignment="Right" Height="175" Margin="0,-8,-2,-13.667" VerticalAlignment="Top" Width="504">
-                <Label x:Name="Doc_Type_" Content="Doc_Type:" Canvas.Top="7" RenderTransformOrigin="0.132,0.282"/>
+                <Label x:Name="Doc_Type_" Content="Doc_Type:" Canvas.Top="7" RenderTransformOrigin="0.132,0.282" Canvas.Left="1"/>
                 <TextBox x:Name="txtDocType" Height="23" TextWrapping="Wrap" Canvas.Top="8" Width="138" Canvas.Left="59"/>
                 <Label x:Name="Doc_Type__Copy" Content="Trading Partner Name:" Canvas.Left="210" Canvas.Top="7" RenderTransformOrigin="0.132,0.282"/>
                 <TextBox x:Name="txtTPName" Height="23" Canvas.Left="343" TextWrapping="Wrap" Canvas.Top="8" Width="151"/>
+                <Label x:Name="label3" Content="Content:" Canvas.Left="1" Canvas.Top="38" RenderTransformOrigin="0.026,0.269" HorizontalAlignment="Left"/>
+                <TextBox x:Name="txtContent" Height="23" Canvas.Left="59" TextWrapping="Wrap" Canvas.Top="41" Width="279"/>
             </Canvas>
         </GroupBox>
         <Label x:Name="lblCount" Content="File count:" Grid.Column="3" HorizontalAlignment="Left" Margin="135.333,83,0,0" VerticalAlignment="Top"/>
